--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/client/node_modules
+/server/venv/Scripts
+/server/**/*.*
+/server/venv/Lib/site-packages/h11/tests/data/test-file
+!/server/venv/Lib/site-packages/requirements.txt
+!/server/venv/Lib/site-packages/server.py
+!/server/venv/Lib/site-packages/station_scraper.py
+!/server/venv/Lib/site-packages/stations.db
