--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /server/chromedriver
 /server/chromedriver.exe
 /server/proxy.pk
+/server/recent_searches.pk
 /server/reset_proxy.py
 /server/stations.db
 /server/status.pk
