Added feedback form

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /client/node_modules
 /server/chromedriver
 /server/chromedriver.exe
+/server/feedback.txt
 /server/proxy.pk
 /server/recent_searches.pk
 /server/reset_proxy.py
