--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^6.2.0",
-		"@fortawesome/free-brands-svg-icons": "^6.2.0",
-		"@fortawesome/free-regular-svg-icons": "^6.2.0",
-		"@fortawesome/free-solid-svg-icons": "^6.2.0",
-		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.14.16",
+		"@mui/material": "^5.14.17",
+		"@mui/x-date-pickers": "^6.18.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"dayjs": "^1.11.10",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.2",
