--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"ably": "^1.2.48",
 		"d3": "^7.8.5",
 		"dayjs": "^1.11.10",
+		"pako": "^2.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.2",
