--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.16",
 		"@mui/material": "^5.14.17",
+		"@mui/x-charts": "^6.19.4",
 		"@mui/x-date-pickers": "^6.18.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
@@ -16,6 +17,7 @@
 		"dayjs": "^1.11.10",
 		"pako": "^2.1.0",
 		"react": "^18.2.0",
+		"react-animated-numbers": "^0.17.1",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.2",
 		"react-scripts": "^5.0.1",
