--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"d3": "^7.8.5",
 		"dayjs": "^1.11.10",
 		"pako": "^2.1.0",
+		"rail-for-less": "file:",
 		"react": "^18.2.0",
 		"react-animated-numbers": "^0.17.1",
 		"react-dom": "^18.2.0",
