--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"d3": "^7.8.5",
 		"dayjs": "^1.11.10",
+		"js-cookie": "^3.0.5",
 		"railforless": "file:",
 		"react": "^18.2.0",
 		"react-animated-numbers": "^0.17.1",
